Heavily optimize